[package]
name = "spider_2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.31.0"
nalgebra = "*"
json = "*"
image = "*"
mlua = { version = "0.8", features = ["lua54", "vendored"]}
nphysics2d = "*"